[package]
name = "atcoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.4.3"
proconio = "0.4.3"
itertools = "0.12.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
permutohedron = "0.2.4"
num = "0.4.1"
rand_pcg = "0.3.1"
libm = "0.2.8"
bitset-fixed = "0.1.0"
rustc-hash = "1.1.0"
rand_core = "0.6.4"
fixedbitset = "0.5.7"
