[package]
name = "atcoder"
version = "0.1.0"
edition = "2021"

[dependencies]
ac-library-rs = "0.1.1"
bitset-fixed = "0.1.0"
fixedbitset = "0.5.7"
itertools = "0.14.0"
libm = "0.2.11"
num = "0.4.3"
num-complex = "0.4.6"
ordered-float = "4.6.0"
permutohedron = "0.2.4"
proconio = "0.5.0"
rand = "0.9.0"
rand_chacha = "0.9.0"
rand_core = "0.9.0"
rand_pcg = "0.9.0"
rustc-hash = "2.1.1"
